...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <Button
        android:id="@+id/descLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_secondary"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guideline_margin_end_vertical_description_shop"
        app:layout_constraintTop_toBottomOf="@id/guideline_margin_end_horizonttal_description_shop" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/descShopPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@id/tab_layout_desc"
        app:layout_constraintEnd_toEndOf="parent"
...
